jACBrFramework/ACBrFramework_JNI/include/ACBrTEF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern

DllImport int TEF_TEFAuttar_GetArqReq(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFAuttar_GetArqResp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFAuttar_GetArqSTS(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFAuttar_GetArqTemp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFAuttar_GetAutoAtivarGP(const INTPTR tefHandle);

DllImport int TEF_TEFAuttar_GetEsperaSTS(const INTPTR tefHandle);

DllImport int TEF_TEFAuttar_GetGPExeName(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFAuttar_GetNumVias(const INTPTR tefHandle);

DllImport int TEF_TEFAuttar_SetArqReq(const INTPTR tefHandle, const PCHAR ArqReq);

DllImport int TEF_TEFAuttar_SetArqResp(const INTPTR tefHandle, const PCHAR ArqResp);

DllImport int TEF_TEFAuttar_SetArqSTS(const INTPTR tefHandle, const PCHAR ArqSTS);

DllImport int TEF_TEFAuttar_SetArqTemp(const INTPTR tefHandle, const PCHAR ArqTemp);

DllImport int TEF_TEFAuttar_SetAutoAtivarGP(const INTPTR tefHandle, const BOOL AutoAtivarGP);

DllImport int TEF_TEFAuttar_SetEsperaSTS(const INTPTR tefHandle, const int EsperaSTS);

DllImport int TEF_TEFAuttar_SetGPExeName(const INTPTR tefHandle, const PCHAR ExeName);

DllImport int TEF_TEFAuttar_SetNumVias(const INTPTR tefHandle, const int NumVias);

DllImport int TEF_TEFDial_GetArqResp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFDial_GetGPExeName(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFDial_SetArqResp(const INTPTR tefHandle, const PCHAR ArqResp);

DllImport int TEF_TEFDial_SetGPExeName(const INTPTR tefHandle, const PCHAR ExeName);

DllImport int TEF_TEFDisc_GetArqReq(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFDisc_GetArqResp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFDisc_GetArqSTS(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFDisc_GetArqTemp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFDisc_GetAutoAtivarGP(const INTPTR tefHandle);

DllImport int TEF_TEFDisc_GetEsperaSTS(const INTPTR tefHandle);

DllImport int TEF_TEFDisc_GetGPExeName(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFDisc_GetNumVias(const INTPTR tefHandle);

DllImport int TEF_TEFDisc_SetArqReq(const INTPTR tefHandle, const PCHAR ArqReq);

DllImport int TEF_TEFDisc_SetArqResp(const INTPTR tefHandle, const PCHAR ArqResp);

DllImport int TEF_TEFDisc_SetArqSTS(const INTPTR tefHandle, const PCHAR ArqSTS);

DllImport int TEF_TEFDisc_SetArqTemp(const INTPTR tefHandle, const PCHAR ArqTemp);

DllImport int TEF_TEFDisc_SetAutoAtivarGP(const INTPTR tefHandle, const BOOL AutoAtivarGP);

DllImport int TEF_TEFDisc_SetEsperaSTS(const INTPTR tefHandle, const int EsperaSTS);

DllImport int TEF_TEFDisc_SetGPExeName(const INTPTR tefHandle, const PCHAR ExeName);

DllImport int TEF_TEFDisc_SetNumVias(const INTPTR tefHandle, const int NumVias);

DllImport int TEF_TEFGood_GetAutoAtivarGP(const INTPTR tefHandle);

DllImport int TEF_TEFGood_GetEsperaSTS(const INTPTR tefHandle);

DllImport int TEF_TEFGood_GetNumVias(const INTPTR tefHandle);

DllImport int TEF_TEFGood_SetAutoAtivarGP(const INTPTR tefHandle, const BOOL AutoAtivarGP);

DllImport int TEF_TEFGood_SetEsperaSTS(const INTPTR tefHandle, const int EsperaSTS);

DllImport int TEF_TEFGood_SetNumVias(const INTPTR tefHandle, const int NumVias);

DllImport int TEF_TEFGPU_GetArqReq(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFGPU_GetArqResp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFGPU_GetArqSTS(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFGPU_GetArqTemp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFGPU_GetAutoAtivarGP(const INTPTR tefHandle);

DllImport int TEF_TEFGPU_GetEsperaSTS(const INTPTR tefHandle);

DllImport int TEF_TEFGPU_GetGPExeName(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFGPU_GetNumVias(const INTPTR tefHandle);

DllImport int TEF_TEFGPU_SetArqReq(const INTPTR tefHandle, const PCHAR ArqReq);

DllImport int TEF_TEFGPU_SetArqResp(const INTPTR tefHandle, const PCHAR ArqResp);

DllImport int TEF_TEFGPU_SetArqSTS(const INTPTR tefHandle, const PCHAR ArqSTS);

DllImport int TEF_TEFGPU_SetArqTemp(const INTPTR tefHandle, const PCHAR ArqTemp);

DllImport int TEF_TEFGPU_SetAutoAtivarGP(const INTPTR tefHandle, const BOOL AutoAtivarGP);

DllImport int TEF_TEFGPU_SetEsperaSTS(const INTPTR tefHandle, const int EsperaSTS);

DllImport int TEF_TEFGPU_SetGPExeName(const INTPTR tefHandle, const PCHAR ExeName);

DllImport int TEF_TEFGPU_SetNumVias(const INTPTR tefHandle, const int NumVias);

DllImport int TEF_TEFHiper_GetArqReq(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFHiper_GetArqResp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFHiper_GetArqSTS(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFHiper_GetArqTemp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFHiper_GetAutoAtivarGP(const INTPTR tefHandle);

DllImport int TEF_TEFHiper_GetEsperaSTS(const INTPTR tefHandle);

DllImport int TEF_TEFHiper_GetGPExeName(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFHiper_GetNumVias(const INTPTR tefHandle);

DllImport int TEF_TEFHiper_SetArqReq(const INTPTR tefHandle, const PCHAR ArqReq);

DllImport int TEF_TEFHiper_SetArqResp(const INTPTR tefHandle, const PCHAR ArqResp);

DllImport int TEF_TEFHiper_SetArqSTS(const INTPTR tefHandle, const PCHAR ArqSTS);

DllImport int TEF_TEFHiper_SetArqTemp(const INTPTR tefHandle, const PCHAR ArqTemp);

DllImport int TEF_TEFHiper_SetAutoAtivarGP(const INTPTR tefHandle, const BOOL AutoAtivarGP);

DllImport int TEF_TEFHiper_SetEsperaSTS(const INTPTR tefHandle, const int EsperaSTS);

DllImport int TEF_TEFHiper_SetGPExeName(const INTPTR tefHandle, const PCHAR ExeName);

DllImport int TEF_TEFHiper_SetNumVias(const INTPTR tefHandle, const int NumVias);