ACBrFramework.Net/ACBrFramework.Net/TEFD/ACBrTEFInterop.cs


		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_GetArqResp(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_SetArqResp(IntPtr tefHandle, String ArqResp);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_GetGPExeName(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_SetGPExeName(IntPtr tefHandle, String ExeName);

		#endregion TEFDial

		#region TEFDisc

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_GetAutoAtivarGP(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_SetAutoAtivarGP(IntPtr tefHandle, bool AutoAtivarGP);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_GetNumVias(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_SetNumVias(IntPtr tefHandle, int NumVias);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_GetEsperaSTS(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_SetEsperaSTS(IntPtr tefHandle, int EsperaSTS);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_GetArqTemp(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_SetArqTemp(IntPtr tefHandle, String ArqTemp);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_GetArqReq(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_SetArqReq(IntPtr tefHandle, String ArqReq);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_GetArqSTS(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_SetArqSTS(IntPtr tefHandle, String ArqSTS);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_GetArqResp(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_SetArqResp(IntPtr tefHandle, String ArqResp);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_GetGPExeName(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDisc_SetGPExeName(IntPtr tefHandle, String ExeName);

		#endregion TEFDisc

		#region TEFHiper

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_GetAutoAtivarGP(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_SetAutoAtivarGP(IntPtr tefHandle, bool AutoAtivarGP);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_GetNumVias(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_SetNumVias(IntPtr tefHandle, int NumVias);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_GetEsperaSTS(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_SetEsperaSTS(IntPtr tefHandle, int EsperaSTS);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_GetArqTemp(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_SetArqTemp(IntPtr tefHandle, String ArqTemp);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_GetArqReq(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_SetArqReq(IntPtr tefHandle, String ArqReq);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_GetArqSTS(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_SetArqSTS(IntPtr tefHandle, String ArqSTS);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_GetArqResp(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_SetArqResp(IntPtr tefHandle, String ArqResp);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_GetGPExeName(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFHiper_SetGPExeName(IntPtr tefHandle, String ExeName);

		#endregion TEFHiper

		#region TEFGPU

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_GetAutoAtivarGP(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_SetAutoAtivarGP(IntPtr tefHandle, bool AutoAtivarGP);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_GetNumVias(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_SetNumVias(IntPtr tefHandle, int NumVias);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_GetEsperaSTS(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_SetEsperaSTS(IntPtr tefHandle, int EsperaSTS);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_GetArqTemp(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_SetArqTemp(IntPtr tefHandle, String ArqTemp);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_GetArqReq(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_SetArqReq(IntPtr tefHandle, String ArqReq);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_GetArqSTS(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_SetArqSTS(IntPtr tefHandle, String ArqSTS);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_GetArqResp(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_SetArqResp(IntPtr tefHandle, String ArqResp);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_GetGPExeName(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGPU_SetGPExeName(IntPtr tefHandle, String ExeName);

		#endregion TEFGPU

		#region TEFAuttar

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_GetAutoAtivarGP(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_SetAutoAtivarGP(IntPtr tefHandle, bool AutoAtivarGP);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_GetNumVias(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_SetNumVias(IntPtr tefHandle, int NumVias);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_GetEsperaSTS(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_SetEsperaSTS(IntPtr tefHandle, int EsperaSTS);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_GetArqTemp(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_SetArqTemp(IntPtr tefHandle, String ArqTemp);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_GetArqReq(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_SetArqReq(IntPtr tefHandle, String ArqReq);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_GetArqSTS(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_SetArqSTS(IntPtr tefHandle, String ArqSTS);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_GetArqResp(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_SetArqResp(IntPtr tefHandle, String ArqResp);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_GetGPExeName(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFAuttar_SetGPExeName(IntPtr tefHandle, String ExeName);

		#endregion TEFAuttar

		#region TEFGood

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGood_GetAutoAtivarGP(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGood_SetAutoAtivarGP(IntPtr tefHandle, bool AutoAtivarGP);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGood_GetNumVias(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGood_SetNumVias(IntPtr tefHandle, int NumVias);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGood_GetEsperaSTS(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFGood_SetEsperaSTS(IntPtr tefHandle, int EsperaSTS);
